--- a/app/src/main/res/layout/activity_tweet.xml
+++ b/app/src/main/res/layout/activity_tweet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00aced"
-    tools:context="com.gary.mytweetapp.Tweet">
+    tools:context="com.gary.mytweetapp.Welcome">
 
     <TextView
         android:id="@+id/welcomeTitle"
