--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00aced"
-    tools:context="com.gary.mytweetapp.Welcome">
+    tools:context="app.tweeting.Welcome">
 
     <TextView
         android:id="@+id/welcomeTitle"
@@ -60,7 +60,8 @@
         android:layout_marginEnd="16dp"
         android:text="@string/loginButton"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="48dp" />
 
     <Button
         android:id="@+id/submitButton"
@@ -72,7 +73,7 @@
         android:layout_marginStart="16dp"
         android:text="@string/submitButton"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/loginButton" />
 </android.support.constraint.ConstraintLayout>
