--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -53,27 +53,29 @@
 
     <Button
         android:id="@+id/loginButton"
+        android:onClick="loginPressed"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/loginButton"
+        android:text="@string/welcomeLogin"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="48dp" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
-        android:id="@+id/submitButton"
+        android:id="@+id/signupButton"
+        android:onClick="signupPressed"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:text="@string/submitButton"
+        android:text="@string/welcomeSignup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/loginButton" />
+
 </android.support.constraint.ConstraintLayout>
