Created style of the buttons on the page

--- a/app/src/main/res/layout/activity_tweet.xml
+++ b/app/src/main/res/layout/activity_tweet.xml
@@ -47,7 +47,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:background="#00aced"
+        android:background="@drawable/tweet_page_button"
         android:text="@string/selectContact"
         app:layout_constraintBottom_toTopOf="@+id/emailTweetVia"
         app:layout_constraintHorizontal_bias="0.501"
@@ -65,7 +65,7 @@
         android:layout_marginBottom="30dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="#00aced"
+        android:background="@drawable/tweet_page_button"
         android:text="@string/emailTweetVia"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -82,7 +82,7 @@
         app:layout_constraintLeft_toRightOf="@+id/cancelButton"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="#c0deed"
+        android:background="@drawable/tweet_page_button"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.928"
         app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton" />
