--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,9 +59,7 @@
         android:ems="10"
         android:hint="@string/loginEmail"
         android:inputType="textEmailAddress"
-        android:text="@string/loginEmail"
         app:layout_constraintTop_toBottomOf="@+id/loginSubtitle"
-        android:layout_marginLeft="85dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
@@ -73,10 +71,8 @@
         android:ems="10"
         android:hint="@string/loginPassword"
         android:inputType="textPassword"
-        android:text="@string/loginPassword"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginEmail"
-        android:layout_marginLeft="85dp" />
+        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />
 
     <Button
         android:id="@+id/login"
@@ -86,11 +82,13 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/button_color_edges"
         android:text="@string/login"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginPassword"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:onClick="loginPressed"/>
 
 </android.support.constraint.ConstraintLayout>
