--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -31,7 +31,6 @@
         android:ems="10"
         android:hint="@string/signupFirstName"
         android:inputType="textPersonName"
-        android:text="@string/signupFirstName"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="0dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -48,7 +47,6 @@
         android:ems="10"
         android:hint="@string/signupLastName"
         android:inputType="textPersonName"
-        android:text="@string/signupLastName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupFirstName"
         android:layout_marginStart="0dp"
@@ -64,7 +62,6 @@
         android:ems="10"
         android:hint="@string/signupEmail"
         android:inputType="textEmailAddress"
-        android:text="@string/signupEmail"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupLastName"
         app:layout_constraintRight_toRightOf="parent"
@@ -79,18 +76,18 @@
         android:ems="10"
         android:hint="@string/signupPassword"
         android:inputType="textPassword"
-        android:text="@string/signupPassword"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupEmail"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.95" />
 
     <Button
-        android:id="@+id/signuButton"
+        android:id="@+id/signupButton"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sugnupButton"
+        android:background="@drawable/button_color_edges"
+        android:text="@string/signupButton"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
@@ -99,6 +96,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/signupPassword"
-        app:layout_constraintVertical_bias="0.756" />
+        app:layout_constraintVertical_bias="0.756"
+        android:onClick="signupPressed"/>
 
 </android.support.constraint.ConstraintLayout>
