--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,6 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/loginPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:onClick="loginPressed"/>
+        android:onClick="loginPressed"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
