--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00aced"
-    tools:context="app.tweeting.Login">
+    tools:context="app.tweeting.activity.Login">
 
     <TextView
         android:id="@+id/loginTitle"
@@ -19,7 +19,9 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp" />
 
     <TextView
         android:id="@+id/loginSubtitle"
@@ -33,7 +35,9 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp" />
 
     <ImageView
         android:id="@+id/twitterIcon"
@@ -48,24 +52,26 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/loginSubtitle"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/loginEmail" />
+        app:layout_constraintBottom_toTopOf="@+id/loginEmail"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/loginEmail"
-        android:layout_width="215dp"
-        android:layout_height="43dp"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="184dp"
         android:ems="10"
         android:hint="@string/loginEmail"
         android:inputType="textEmailAddress"
-        app:layout_constraintTop_toBottomOf="@+id/loginSubtitle"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginSubtitle" />
 
     <EditText
         android:id="@+id/loginPassword"
-        android:layout_width="215dp"
-        android:layout_height="43dp"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:ems="10"
@@ -90,6 +96,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:onClick="loginPressed"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp" />
 
 </android.support.constraint.ConstraintLayout>
