--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00aced"
-    tools:context="app.tweeting.Signup">
+    tools:context="app.tweeting.activity.Signup">
 
     <ImageView
         android:id="@+id/twitterIcon"
