--- a/app/src/main/res/layout/activity_tweet.xml
+++ b/app/src/main/res/layout/activity_tweet.xml
@@ -1,108 +1,67 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#191970"
-    tools:context="app.tweeting.Tweet">
+    android:background="#008fc6"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="app.tweeting.activity.Tweet">
 
-    <TextView
-        android:id="@+id/tweetingTitle"
-        android:layout_width="422dp"
-        android:layout_height="232dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="84dp"
-        android:hint="@string/tweetingTitle"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColorHint="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01" />
-
-    <Button
-        android:id="@+id/cancelButton"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/cancelButton"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#00aced"
-        app:layout_constraintHorizontal_bias="0.02"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/selectContact"
-        android:layout_width="136dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/tweet_page_button"
-        android:text="@string/selectContact"
-        app:layout_constraintBottom_toTopOf="@+id/emailTweetVia"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="153dp"
-        tools:layout_editor_absoluteY="465dp" />
-
-    <Button
-        android:id="@+id/emailTweetVia"
-        android:layout_width="135dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/tweet_page_button"
-        android:text="@string/emailTweetVia"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="519dp" />
+    <ImageButton
+        android:id="@+id/cleared_action"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/email_button"
+        android:contentDescription="@string/clear"
+        android:onClick="clearedButtonPressed"
+        android:src="@drawable/cleared" />
 
     <Button
         android:id="@+id/tweetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tweetButton"
-        app:layout_constraintLeft_toRightOf="@+id/cancelButton"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/tweet_page_button"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.928"
-        app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton" />
+        android:onClick="tweetButtonPressed"
+        android:text="@string/tweetButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:id="@+id/counter"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:textColor="#ffffff"
-        android:text="@string/counter"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tweetingTitle"
-        app:layout_constraintVertical_bias="0.028" />
+        android:hint="@string/tweetingTitle"
+        app:counterEnabled="true"
+        app:counterMaxLength="140"
+        android:layout_marginTop="45dp"
+        android:layout_below="@+id/cleared_action"
+        android:layout_alignParentStart="true">
 
-</android.support.constraint.ConstraintLayout>
+        <EditText
+            android:id="@+id/tweetingTitle"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:layout_below="@+id/textLayout"
+            android:layout_centerHorizontal="true"
+            android:hint="@string/tweetingTitle"
+            android:maxLength="140"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+
+    </android.support.design.widget.TextInputLayout>
+
+
+    <ImageButton
+        android:id="@+id/emailButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/email_button"
+        android:contentDescription="@string/emailTweetVia"
+        android:src="@drawable/email_icon" />
+
+</RelativeLayout>
