--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00aced"
-    tools:context="app.tweeting.Welcome">
+    tools:context="app.tweeting.activity.Welcome">
 
     <TextView
         android:id="@+id/welcomeTitle"
