--- a/app/src/main/res/menu/menu_tweet.xml
+++ b/app/src/main/res/menu/menu_tweet.xml
@@ -3,22 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu"
-        android:icon="@drawable/ic_menu_black_24dp"
+        android:icon="@drawable/menu_icon"
         android:orderInCategory="100"
         android:title="@string/menu"
         app:showAsAction="ifRoom">
         <menu>
             <item
-                android:id="@+id/menuSettings"
-                android:icon="@drawable/ic_settings_black_24dp"
+                android:id="@+id/account"
                 android:orderInCategory="100"
-                android:title="@string/menuSettings" />
+                android:icon="@drawable/user_icon"
+                android:title="@string/account" />
+            <item
+                android:id="@+id/settings"
+                android:icon="@drawable/settings_icon"
+                android:orderInCategory="100"
+                android:title="@string/settings" />
 
             <item
-                android:id="@+id/menuLogout"
-                android:icon="@drawable/ic_logout_black_24dp"
+                android:id="@+id/logout"
+                android:icon="@drawable/logout_icon"
                 android:orderInCategory="100"
-                android:title="@string/menuLogout"
+                android:title="@string/logout"
                 app:showAsAction="ifRoom" />
         </menu>
     </item>
