--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#253ec9</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#ff0000</color>
+    <color name="colorAccent">#008fc6</color>
 </resources>
