Changed file names to coincide with myRentApp labs layout for easy readability purpose

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -2,13 +2,13 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
         android:key="username"
-        android:summary="@string/username_summary"
+        android:summary="@string/usernameSubTitle"
         android:title="@string/username" />
 
     <EditTextPreference
         android:inputType="textPassword"
         android:key="password"
-        android:summary="@string/password_summary"
+        android:summary="@string/passwordSubTitle"
         android:title="@string/password" />
 
 </PreferenceScreen>
