Replaced style of font to cursive and rearranged layout of pages

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00aced"
-    tools:context="app.tweeting.activity.Welcome">
+    tools:context="app.tweeting.activities.WelcomeActivity">
 
     <TextView
         android:id="@+id/welcomeTitle"
@@ -14,9 +14,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="91dp"
+        android:fontFamily="cursive"
         android:text="@string/welcomeTitle"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#ffffff"
+        android:textSize="36sp"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,7 +31,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="28dp"
-        android:contentDescription="@string/twitter_icon"
+        android:contentDescription="@string/twitterIcon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
@@ -43,8 +45,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="cursive"
         android:text="@string/welcomeMessage"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -53,20 +58,23 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:onClick="loginPressed"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/button_color_edges"
+        android:fontFamily="cursive"
+        android:onClick="loginPressed"
         android:text="@string/welcomeLogin"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/signupButton"
-        android:onClick="signupPressed"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,7 +82,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:background="@drawable/button_color_edges"
+        android:fontFamily="cursive"
+        android:onClick="signupPressed"
         android:text="@string/welcomeSignup"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintLeft_toLeftOf="parent"
