--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00aced"
-    tools:context="app.tweeting.activity.Signup">
+    tools:context="app.tweeting.activities.SignupActivity">
 
     <ImageView
         android:id="@+id/twitterIcon"
@@ -13,7 +13,7 @@
         android:layout_height="150dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:contentDescription="@string/twitter_icon"
+        android:contentDescription="@string/twitterIcon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/twitter_bird"
@@ -21,82 +21,105 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/signupFirstName"
-        app:layout_constraintVertical_bias="0.571" />
+        app:layout_constraintVertical_bias="0.571"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/signupFirstName"
         android:layout_width="215dp"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="85dp"
+        android:layout_marginTop="201dp"
         android:ems="10"
+        android:fontFamily="cursive"
         android:hint="@string/signupFirstName"
         android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textIsSelectable="false"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="201dp"
-        app:layout_constraintHorizontal_bias="0.95" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/signupLastName"
         android:layout_width="215dp"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="85dp"
-        android:layout_marginTop="-23dp"
+        android:layout_marginTop="0dp"
         android:ems="10"
+        android:fontFamily="cursive"
         android:hint="@string/signupLastName"
         android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupFirstName"
-        android:layout_marginStart="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.95" />
+        app:layout_constraintTop_toBottomOf="@+id/signupFirstName" />
 
     <EditText
         android:id="@+id/signupEmail"
         android:layout_width="215dp"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="85dp"
-        android:layout_marginTop="-22dp"
+        android:layout_marginTop="-1dp"
         android:ems="10"
+        android:fontFamily="cursive"
         android:hint="@string/signupEmail"
         android:inputType="textEmailAddress"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupLastName"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.95" />
+        app:layout_constraintTop_toBottomOf="@+id/signupLastName" />
 
     <EditText
         android:id="@+id/signupPassword"
         android:layout_width="215dp"
-        android:layout_height="43dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="85dp"
-        android:layout_marginTop="-11dp"
+        android:layout_marginTop="0dp"
         android:ems="10"
+        android:fontFamily="cursive"
         android:hint="@string/signupPassword"
         android:inputType="textPassword"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupEmail"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.95" />
+        app:layout_constraintTop_toBottomOf="@+id/signupEmail" />
 
     <Button
         android:id="@+id/signupButton"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_color_edges"
-        android:text="@string/signupButton"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/button_color_edges"
+        android:fontFamily="cursive"
+        android:onClick="signupPressed"
+        android:text="@string/signupButton"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupPassword"
         app:layout_constraintVertical_bias="1.0"
-        android:onClick="signupPressed"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
 </android.support.constraint.ConstraintLayout>
