--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00aced"
-    tools:context="app.tweeting.activities.LoginActivity">
+    tools:context=".activities.LoginActivity">
 
     <TextView
         android:id="@+id/loginTitle"
