--- a/app/src/main/res/layout-v21/activity_welcome.xml
+++ b/app/src/main/res/layout-v21/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00aced"
-    tools:context="app.tweeting.activities.WelcomeActivity">
+    tools:context=".activities.WelcomeActivity">
 
     <TextView
         android:id="@+id/welcomeTitle"
