Moved to new layout folder

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -13,7 +13,7 @@
         android:layout_height="150dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:contentDescription="@string/twitterIcon"
+        android:contentDescription="@string/twitter_icon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/twitter_bird"
@@ -29,17 +29,17 @@
         android:id="@+id/signupFirstName"
         android:layout_width="215dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="85dp"
-        android:layout_marginTop="201dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginTop="200dp"
         android:ems="10"
-        android:fontFamily="cursive"
-        android:hint="@string/signupFirstName"
+        android:fontFamily="serif"
+        android:hint="@string/signup_firstName"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textIsSelectable="false"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        app:layout_constraintHorizontal_bias="0.905"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -48,16 +48,16 @@
         android:id="@+id/signupLastName"
         android:layout_width="215dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="85dp"
+        android:layout_marginEnd="70dp"
         android:layout_marginTop="0dp"
         android:ems="10"
-        android:fontFamily="cursive"
-        android:hint="@string/signupLastName"
+        android:fontFamily="serif"
+        android:hint="@string/signup_lastName"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        app:layout_constraintHorizontal_bias="0.905"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupFirstName" />
@@ -66,16 +66,16 @@
         android:id="@+id/signupEmail"
         android:layout_width="215dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="85dp"
+        android:layout_marginEnd="70dp"
         android:layout_marginTop="-1dp"
         android:ems="10"
-        android:fontFamily="cursive"
-        android:hint="@string/signupEmail"
+        android:fontFamily="serif"
+        android:hint="@string/signup_email"
         android:inputType="textEmailAddress"
         android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        app:layout_constraintHorizontal_bias="0.905"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupLastName" />
@@ -84,16 +84,16 @@
         android:id="@+id/signupPassword"
         android:layout_width="215dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="85dp"
+        android:layout_marginEnd="70dp"
         android:layout_marginTop="0dp"
         android:ems="10"
-        android:fontFamily="cursive"
-        android:hint="@string/signupPassword"
+        android:fontFamily="serif"
+        android:hint="@string/signup_password"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        app:layout_constraintHorizontal_bias="0.905"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupEmail" />
@@ -110,7 +110,7 @@
         android:background="@drawable/button_color_edges"
         android:fontFamily="cursive"
         android:onClick="signupPressed"
-        android:text="@string/signupButton"
+        android:text="@string/signup_button"
         android:textAllCaps="false"
         android:textSize="18sp"
         android:textStyle="bold"
