--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="91dp"
         android:fontFamily="cursive"
-        android:text="@string/welcomeTitle"
+        android:text="@string/welcome_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#ffffff"
         android:textSize="36sp"
@@ -31,7 +31,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="28dp"
-        android:contentDescription="@string/twitterIcon"
+        android:contentDescription="@string/twitter_icon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
@@ -46,7 +46,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="cursive"
-        android:text="@string/welcomeMessage"
+        android:text="@string/welcome_message"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -66,7 +66,7 @@
         android:background="@drawable/button_color_edges"
         android:fontFamily="cursive"
         android:onClick="loginPressed"
-        android:text="@string/welcomeLogin"
+        android:text="@string/welcome_login"
         android:textAllCaps="false"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -84,7 +84,7 @@
         android:background="@drawable/button_color_edges"
         android:fontFamily="cursive"
         android:onClick="signupPressed"
-        android:text="@string/welcomeSignup"
+        android:text="@string/welcome_signup"
         android:textAllCaps="false"
         android:textSize="18sp"
         android:textStyle="bold"
