--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="66dp"
         android:fontFamily="cursive"
-        android:text="@string/loginTitle"
+        android:text="@string/login_title"
         android:textAppearance="@android:style/TextAppearance.Large"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
@@ -37,7 +37,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:fontFamily="cursive"
-        android:text="@string/loginSubtitle"
+        android:text="@string/login_subtitle"
         android:textAppearance="@android:style/TextAppearance.Medium"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="24sp"
@@ -53,7 +53,7 @@
         android:layout_height="150dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:contentDescription="@string/twitterIcon"
+        android:contentDescription="@string/twitter_icon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/twitter_bird"
@@ -71,14 +71,14 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="179dp"
+        android:layout_marginTop="178dp"
         android:ems="10"
-        android:fontFamily="cursive"
-        android:hint="@string/loginEmail"
+        android:fontFamily="serif"
+        android:hint="@string/login_email"
         android:inputType="textEmailAddress"
         android:textAlignment="center"
-        android:textSize="24sp"
-        app:layout_constraintHorizontal_bias="0.35"
+        android:textSize="18sp"
+        android:textStyle="italic"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginSubtitle" />
@@ -90,17 +90,17 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:ems="10"
-        android:fontFamily="cursive"
-        android:hint="@string/loginPassword"
+        android:fontFamily="serif"
+        android:hint="@string/login_password"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="18sp"
+        android:textStyle="italic"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginEmail"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.39" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/login"
