--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#1c3249</color>
+
     <color name="tweetBackground">#008fc6</color>
     <color name="white">#ffffffff</color>
     <color name="blue">#ff33b5e5</color>
     <color name="blackText">#000000</color>
     <color name="containerBackground">#c0deed</color>
+
+    <color name="colorPrimary">#27547e</color>
+    <color name="colorPrimaryDark">#234b71</color>
+    <color name="colorAccent">#1b6ab9</color>
+    <color name="bgColor">#ffffff</color>
+
 </resources>
