--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item type="id" name="viewPager" />
+    <item name="toolbar" type="id">toolbar</item>
+    <item name="menu_clear" type="id">Clear Tweets</item>
 </resources>
