--- a/app/src/main/res/layout/fragment_tweet.xml
+++ b/app/src/main/res/layout/fragment_tweet.xml
@@ -6,6 +6,10 @@
     android:background="@color/tweetBackground"
     android:orientation="vertical">
 
+<!--
+    design widget layout for tweet box referenced from:
+    https://developer.android.com/reference/android/support/design/widget/TextInputLayout.html
+-->
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="match_parent"
