--- a/app/src/main/res/layout/list_item_tweet.xml
+++ b/app/src/main/res/layout/list_item_tweet.xml
@@ -24,11 +24,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:fontFamily="cursive"
         android:layout_alignStart="@+id/timeline_item_dateTextView"
         android:paddingEnd="8dp"
         android:paddingStart="8dp"
         android:textColor="@color/blackText"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/timeline_item_dateTextView"
