Brought in feature to round twitter icon in the list row

--- a/app/src/main/res/layout/list_item_tweet.xml
+++ b/app/src/main/res/layout/list_item_tweet.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:textAlignment="center">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/RowImage"
         android:layout_width="30dp"
         android:layout_height="30dp"
